# crewai-project

app/: README.md  poem.txt  pyproject.toml
app/src/app/: help.md  main.py  main1.py
app/tests/: help.md
